--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "version": "0.0.1",
   "main": "fs-ex.js",
   "dependencies": {
-    "fs-walker": ">=0.0.6"
+    "fs.walker": ">=0.0.6"
   },
   "devDependencies": {},
   "optionalDependencies": {},
